# qwm

./: install.sh  pyproject.toml  requirements.txt
qwm/: __init__.py  __main__.py  main.py  qwm.py
qwm/bar/: __init__.py
qwm/compositor/: __init__.py  compositor.py
qwm/core/: __init__.py  config.py  logger.py  state.py  wm.py
qwm/game_mode/: __init__.py  mode.py
qwm/input/: __init__.py  keybinds.py
qwm/ipc/: __init__.py  server.py
qwm/layout/: __init__.py  tiling.py
qwm/nvidia/: __init__.py  detect.py  glx.py  gsync.py  nvml.py  powermizer.py  settings.py
qwm/x11/: __init__.py  atoms.py  display.py  events.py  window.py
scripts/: debug.sh
tests/: test_layout.py  test_nvidia.py
