[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qwm"
version = "0.1.0-alpha"
description = "NVIDIA-Optimized Python X11 Tiling Window Manager"
authors = [{ name = "QWM Contributors" }]
requires-python = ">=3.11"
dependencies = [
    "python-xlib>=0.33",
    "pynvml>=11.5.0",
    "xcffib>=1.4.0",
    "psutil>=5.9.0"
]

[project.scripts]
qwm = "qwm.main:main"
